[gd_scene load_steps=15 format=2]

[ext_resource path="res://Scenes/MainCamera.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/Shark.gd" type="Script" id=2]
[ext_resource path="res://Assets/light.png" type="Texture" id=3]
[ext_resource path="res://Audio/GunShotSnglShotIn PE1097906.mp3" type="AudioStream" id=4]
[ext_resource path="res://Assets/gunfireeffect.png" type="Texture" id=5]
[ext_resource path="res://Scenes/Crosshair.tscn" type="PackedScene" id=6]
[ext_resource path="res://Assets/dolphin.png" type="Texture" id=7]

[sub_resource type="Animation" id=2]
resource_name = "GunFireEffect"
length = 0.05
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.05 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.5, 1.2 ) ]
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../Rocket:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../Rocket:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 3 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "rocket"
length = 0.2
loop = true
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("../Rocket:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../Rocket:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 3 ), Vector2( 1, 2 ), Vector2( 1, 1.4 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "GunFireEffect"
length = 0.05
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.05 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.5, 1.2 ) ]
}

[sub_resource type="Animation" id=7]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../Rocket:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../Rocket:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 3 ) ]
}

[sub_resource type="Animation" id=8]
resource_name = "rocket"
length = 0.2
loop = true
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("../Rocket:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../Rocket:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 3 ), Vector2( 1, 2 ), Vector2( 1, 1.4 ), Vector2( 1, 1 ) ]
}

[sub_resource type="CapsuleShape2D" id=5]
radius = 4.27542
height = 22.8661

[node name="Shark" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="MainCamera" parent="." instance=ExtResource( 1 )]
position = Vector2( -0.0454559, 0.017561 )
offset = Vector2( 0, 0 )
limit_left = -5020
limit_top = -4055
limit_right = 5615
limit_bottom = 4357

[node name="Gun1" type="Position2D" parent="."]
position = Vector2( 25.782, -9.44787 )

[node name="GunFireEffect" type="Sprite" parent="."]
position = Vector2( 20.2384, -9.41262 )
rotation = 1.5708
texture = ExtResource( 5 )

[node name="Light2D" type="Light2D" parent="GunFireEffect"]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 3 )

[node name="Rocket" type="Sprite" parent="."]
position = Vector2( -19.4043, -0.504813 )
rotation = 4.71239
scale = Vector2( 1, 3 )
texture = ExtResource( 5 )

[node name="Light2D" type="Light2D" parent="Rocket"]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../GunFireEffect")
autoplay = "rocket"
anims/GunFireEffect = SubResource( 2 )
anims/RESET = SubResource( 3 )
anims/rocket = SubResource( 4 )

[node name="AnimationPlayer2" type="AnimationPlayer" parent="."]
root_node = NodePath("../GunFireEffect")
autoplay = "rocket"
anims/GunFireEffect = SubResource( 6 )
anims/RESET = SubResource( 7 )
anims/rocket = SubResource( 8 )

[node name="Crosshair" parent="." instance=ExtResource( 6 )]
position = Vector2( -35.8432, -29.5365 )

[node name="DashCoolDown" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
pitch_scale = 1.57

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.21022, -0.735788 )
rotation = 1.5708
shape = SubResource( 5 )

[node name="Light2D" type="Light2D" parent="."]
visible = false
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 3 )

[connection signal="timeout" from="DashCoolDown" to="." method="_on_DashCoolDown_timeout"]
